--- a/orders/templates/orders/orders.html
+++ b/orders/templates/orders/orders.html
@@ -46,7 +46,7 @@
                     <label class="select-label">Месяц:</label>
                     <select name="month" class="month-select">
                         {% for m in months %}
-                            <option value="{{ m }}" {% if m == selected_month %}selected{% endif %}>{{ m }}</option>
+                            <option value="{{ m }}" {% if m == selected_month %}selected{% endif %}>{{ month_names|get_item:m }}</option>
                         {% endfor %}
                     </select>
                 </div>
@@ -59,7 +59,7 @@
                 <button type="submit" class="button">Показать</button>
             </form>
             <div class="monthly-total-info">
-                <span>Сумма заказов за {{ selected_month }}/{{ selected_year }}:</span>
+                <span>Сумма заказов за {{ month_names|get_item:selected_month }}/{{ selected_year }}:</span>
                 <span class="total-amount">
                     {{ monthly_total }} ₽
                 </span>
