добавил эксель и ворд

--- a/orders/templates/orders/client_orders.html
+++ b/orders/templates/orders/client_orders.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container">
     <div class="orders-header">
-        <h2>Мои заказы</h2>
+        <h2>Заказы</h2>
         <div class="sort-box" style="margin-bottom: 20px;">
             <form method="get" id="sortForm">
                 <select name="sort" onchange="this.form.submit()" class="sort-select">
