--- a/orders/templates/orders/orders.html
+++ b/orders/templates/orders/orders.html
@@ -45,8 +45,8 @@
                 <div class="select-group">
                     <label class="select-label">Месяц:</label>
                     <select name="month" class="month-select">
-                        {% for m in months %}
-                            <option value="{{ m }}" {% if m == selected_month %}selected{% endif %}>{{ month_names|get_item:m }}</option>
+                        {% for m, name in months %}
+                            <option value="{{ m }}" {% if m == selected_month %}selected{% endif %}>{{ name }}</option>
                         {% endfor %}
                     </select>
                 </div>
@@ -59,7 +59,11 @@
                 <button type="submit" class="button">Показать</button>
             </form>
             <div class="monthly-total-info">
-                <span>Сумма заказов за {{ month_names|get_item:selected_month }}/{{ selected_year }}:</span>
+                {% for m, name in months %}
+                    {% if m == selected_month %}
+                        <span>Сумма заказов за {{ name }}/{{ selected_year }}:</span>
+                    {% endif %}
+                {% endfor %}
                 <span class="total-amount">
                     {{ monthly_total }} ₽
                 </span>
@@ -69,6 +73,7 @@
         <!-- Create Order button -->
         <div class="create-order">
             <a href="{% url 'orders:create_order' %}" class="button">+ Создать заказ</a>
+            <a href="{% url 'orders:calculations' %}" class="button">Дополнительно</a>
         </div>
     </div>
     
